--- a/index.html
+++ b/index.html
@@ -430,32 +430,28 @@
 }
 
 .third-timeline-section.active {
-  opacity: 1;
+   opacity: 1;
   transform: translateY(0);
   visibility: visible;
   display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 50px;
-    margin: 0 auto;
-    width: 60%;
-    position: absolute;
-    top: 350%;
-    left: 34%;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 0 auto;
+  width: 80%;
   }
-
 
 /* Position for Larger Screens */
 @media (min-width: 1024px) {
+  /* Below the third circle */
   .third-timeline-section.active {
-    position: absolute;
-    top: 350%;
+    top: calc(var(--third-circle-top) + var(--circle-height) + 20px); /* Adjust based on circle size */
     left: 34%;
   }
 
+  /* Below the fourth circle */
   .fourth-timeline-section.active {
-    position: absolute;
-    top: 411%;
+    top: calc(var(--fourth-circle-top) + var(--circle-height) + 20px);
     left: 1%;
   }
 }
@@ -464,7 +460,7 @@
 @media (min-width: 768px) and (max-width: 1023px) {
   .third-timeline-section.active,
   .fourth-timeline-section.active {
-    position: relative;
+    position: relative; /* Adjust for tablet responsiveness */
     width: 90%;
     flex-direction: column;
     gap: 15px;
@@ -475,7 +471,7 @@
 @media (max-width: 767px) {
   .third-timeline-section.active,
   .fourth-timeline-section.active {
-    position: relative;
+    position: relative; /* Adjust for mobile */
     flex-direction: column;
     width: 100%;
     text-align: center;
