--- a/index.html
+++ b/index.html
@@ -445,7 +445,8 @@
 @media (min-width: 1024px) {
   /* Below the third circle */
   .third-timeline-section.active {
-    top: calc(var(--third-circle-top) + var(--circle-height) + 20px); /* Adjust based on circle size */
+    position:absolute;
+    top :  370%
     left: 34%;
   }
 
