--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
   /* Below the third circle */
   .third-timeline-section.active {
     position:absolute;
-    top :  370%
+    top :  370%;
     left: 34%;
   }
 
