--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
   transform: translateY(0);
   visibility: visible;
   display: flex;
+  transition: opacity 0.4s ease-out 0.3s, transform 0.4s ease-out 0.3s;
     align-items: center;
     justify-content: space-between;
     gap: 50px;
@@ -430,55 +431,21 @@
 }
 
 .third-timeline-section.active {
-   opacity: 1;
+  opacity: 1;
   transform: translateY(0);
   visibility: visible;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 20px;
-  margin: 0 auto;
-  width: 80%;
-  }
-
-/* Position for Larger Screens */
-@media (min-width: 1024px) {
-  /* Below the third circle */
-  .third-timeline-section.active {
-    position:absolute;
-    top :  370%;
+    align-items: center;
+    justify-content: space-between;
+    gap: 50px;
+    margin: 0 auto;
+    width: 60%;
+    position: absolute;
+    top: 350%;
     left: 34%;
   }
 
-  /* Below the fourth circle */
-  .fourth-timeline-section.active {
-    top: calc(var(--fourth-circle-top) + var(--circle-height) + 20px);
-    left: 1%;
-  }
-}
 
-/* Responsive Adjustments for Tablets */
-@media (min-width: 768px) and (max-width: 1023px) {
-  .third-timeline-section.active,
-  .fourth-timeline-section.active {
-    position: relative; /* Adjust for tablet responsiveness */
-    width: 90%;
-    flex-direction: column;
-    gap: 15px;
-  }
-}
-
-/* Responsive Adjustments for Mobile */
-@media (max-width: 767px) {
-  .third-timeline-section.active,
-  .fourth-timeline-section.active {
-    position: relative; /* Adjust for mobile */
-    flex-direction: column;
-    width: 100%;
-    text-align: center;
-    gap: 10px;
-  }
-}
 
 /* Container for Content */
 .timeline-content, .third-timeline-content {
@@ -1161,12 +1128,12 @@ padding-left: 45px;
 })();
 
 
-  // // 🟡 Utility Function: Position Section
-  // function positionSection(section, circle, xOffset, yOffset) {
-  //   const circleBounds = circle.querySelector('circle').getBoundingClientRect();
-  //   section.style.left = `${circleBounds.left + xOffset}px`;
-  //   section.style.top = `${circleBounds.top + yOffset}px`;
-  // }
+  // 🟡 Utility Function: Position Section
+  function positionSection(section, circle, xOffset, yOffset) {
+    const circleBounds = circle.querySelector('circle').getBoundingClientRect();
+    section.style.left = `${circleBounds.left + xOffset}px`;
+    section.style.top = `${circleBounds.top + yOffset}px`;
+  }
 
   // 🟣 Animate Circle Groups
   (function () {
