--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     margin: 0 auto;
     width: 60%;
     position: absolute;
-    top: 350%;
+    top: 353%;
     left: 34%;
   }
 
@@ -743,7 +743,7 @@ padding-left: 45px;
   <div class="content">
     <p class="heritage-heading">HARMONY THROUGH HERITAGE</p>
     <h1>Shri Samsthan Gokarn Partagali Jeevottam Math</h1>
-    <p class="scroll-down">Scroll Down</p>
+    <p class="scroll-down">Scroll Down ee</p>
   </div>
 </div>
 
@@ -1128,12 +1128,6 @@ padding-left: 45px;
 })();
 
 
-  // 🟡 Utility Function: Position Section
-  function positionSection(section, circle, xOffset, yOffset) {
-    const circleBounds = circle.querySelector('circle').getBoundingClientRect();
-    section.style.left = `${circleBounds.left + xOffset}px`;
-    section.style.top = `${circleBounds.top + yOffset}px`;
-  }
 
   // 🟣 Animate Circle Groups
   (function () {
