--- a/index.html
+++ b/index.html
@@ -207,8 +207,9 @@
     gap: 50px;
     margin: 0 auto;
     width: 60%;
-    margin-top: -140%;
-    margin-left: 34%;
+  position:absolute;
+  top: 240%;
+  left: 34%;
 }
 
 /* Fade-In Active State */
