--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     margin: 0 auto;
     width: 60%;
   position:absolute;
-  top: 240%;
+  top: 140%;
   left: 34%;
 }
 
@@ -223,8 +223,10 @@
     gap: 50px;
     margin: 0 auto;
     width: 60%;
-    margin-top: 12%;
-    margin-left: 34%;
+   position:absolute;
+  top: 140%;
+  left: 34%;
+
   }
 
 
