--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     margin: 0 auto;
     width: 60%;
   position:absolute;
-  top: 140%;
+  top: 180%;
   left: 34%;
 }
 
@@ -224,7 +224,7 @@
     margin: 0 auto;
     width: 60%;
    position:absolute;
-  top: 140%;
+  top: 363%;
   left: 34%;
 
   }
@@ -404,7 +404,8 @@
   transform: translate(0);
   width: 60%;
   padding-left: 30px;
-  /* top: -45%; */
+  position:absolute;
+  top: 245%;
 }
 
 
@@ -415,7 +416,8 @@
   transform: translate(0, 0);
   width: 57%;
   padding-left: 30px;
-  top: -4%;
+  position:absolute;
+  top: 426%;
 }
 
 .second-timeline-section .timeline-content,
