--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <!-- For icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+
 
   <title>Partagali Math UI</title>
  
@@ -426,8 +428,9 @@
   </button>
 </div> -->
 
-    
+    <div class="grid-main-container">
 <div class="grid-container">
+  <div class="col-lg-3">
   <a href="#guruparampara" class="grid-item">
     <div class="overlay">
       <h3>Guruparampara</h3>
@@ -436,6 +439,9 @@
     </div>
     <img src="images/Rectangle 43.png" alt="Guruparampara">
   </a>
+</div>
+
+<div class="col-lg-3">
   <a href="#shaka-mathas" class="grid-item">
     <div class="overlay">
       <h3>Shaka Mathas</h3>
@@ -444,6 +450,10 @@
     </div>
     <img src="images/Rectangle 49.png" alt="Shaka Mathas">
   </a>
+
+</div>
+
+<div class="col-lg-3">
   <a href="#partagali-math" class="grid-item">
     <div class="overlay">
       <h3>Partagali Math</h3>
@@ -452,14 +462,24 @@
     </div>
     <img src="images/Rectangle 49 (1).png" alt="Partagali Math">
   </a>
-  <a href="#e-content" class="grid-item">
-    <div class="overlay">
-      <h3>E-Content</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-      <span class="view-more">View More</span>
+</div>
+</div>
+
+
+  <div class="grid-container-2">
+    <div class="col-lg-3">
+        <a href="#e-content" class="grid-item">
+        <div class="overlay">
+          <h3>E-Content</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+          <span class="view-more">View More</span>
+        </div>
+
+        <img src="images/Rectangle 49 (2).png" alt="E-Content">
+      </a>
     </div>
-    <img src="images/Rectangle 49 (2).png" alt="E-Content">
-  </a>
+
+  <div class="col-lg-3">
   <a href="#social-initiatives" class="grid-item">
     <div class="overlay">
       <h3>Social Initiatives</h3>
@@ -468,6 +488,9 @@
     </div>
     <img src="images/Rectangle 49 (3).png" alt="Social Initiatives">
   </a>
+  </div>
+
+  <div class="col-lg-3">
   <a href="#contact" class="grid-item">
     <div class="overlay">
       <h3>Contact</h3>
@@ -476,8 +499,9 @@
     </div>
     <img src="images/Rectangle 49 (4).png" alt="Contact">
   </a>
+  </div>
 </div>
-
+</div>
 <!-- Floating Scroll Down Button -->
 <!-- <button class="partagali-scroll-button" onclick="scrollToNext()">↓</button> -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
